src/features/ipfs/Drive/drive.scss
.main {
  max-width: 100%;
  overflow: visible;
}
.results {
  max-width: 100%;
  overflow-x: auto;
  &::after {
    content: '';
    display: table;
    clear: both;
  }
}

.centered {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 10px;
}

.statusMessage {
  display: flex;
  align-items: center;
  color: magenta;
  &::before {
    content: '⚡️';
  }
}

.errorMessage {
  color: red;
  font-family: monospace;
  font-size: 1.2em;
}

.commandPanel {
  display: flex;
  justify-content: space-between;
  margin-top: 10px;
}

.subPanel {
  display: flex;
  align-items: center;
  & > button {
    margin-right: 10px;
    &:last-child {
      margin-right: 0;
    }
  }
}

.logs {
  margin-top: 10px;
  font-family: monospace, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
    sans-serif;
}

.queryInput {
  margin: 5px;
  width: calc(100% - 10px);
  padding: 10px;
  color: white;
  resize: vertical;
}

.logItems {
  // padding-left: 25px;
}

